--- a/evonsys/test-output/old/Suite/methods-not-run.html
+++ b/evonsys/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,5 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.evonsys.citi.base.Base.beforeSuite</td></tr>
+<tr><td>com.evonsys.citi.base.Base.tearDown</td></tr>
+<tr><td>com.evonsys.citi.base.Base.beforeTest</td></tr>
 </table>
