--- a/evonsys/test-output/old/Suite/methods-alphabetical.html
+++ b/evonsys/test-output/old/Suite/methods-alphabetical.html
@@ -1,44 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dfaefb">  <td>20/04/27 11:48:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HCM_Login.HomePage()[pri:2, instance:testng.HCM_Login@39aeed2f]">HomePage</td> 
-  <td>main@1122134344</td>   <td></td> </tr>
-<tr bgcolor="9bad6f">  <td>20/04/27 11:47:55</td>   <td>-10090</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterMethod(org.testng.ITestResult)[pri:0, instance:testng.InvalidLoginCredientials@5c7fa833]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1122134344</td>   <td></td> </tr>
-<tr bgcolor="9bad6f">  <td>20/04/27 11:48:04</td>   <td>-413</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterMethod(org.testng.ITestResult)[pri:0, instance:testng.HCM_Login@39aeed2f]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1122134344</td>   <td></td> </tr>
-<tr bgcolor="9bad6f">  <td>20/04/27 11:48:13</td>   <td>8347</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterMethod(org.testng.ITestResult)[pri:0, instance:testng.HCM_Login@39aeed2f]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1122134344</td>   <td></td> </tr>
-<tr bgcolor="9bad6f">  <td>20/04/27 11:49:06</td>   <td>61634</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterMethod(org.testng.ITestResult)[pri:0, instance:testng.HCM_Login@39aeed2f]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1122134344</td>   <td></td> </tr>
-<tr bgcolor="9bad6f">  <td>20/04/27 11:49:58</td>   <td>113577</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterMethod(org.testng.ITestResult)[pri:0, instance:testng.HCM_Login@39aeed2f]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1122134344</td>   <td></td> </tr>
-<tr bgcolor="9bad6f">  <td>20/04/27 11:47:52</td>   <td>-12394</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.beforeMethod(java.lang.reflect.Method)[pri:0, instance:testng.InvalidLoginCredientials@5c7fa833]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1122134344</td>   <td></td> </tr>
-<tr bgcolor="9bad6f">  <td>20/04/27 11:47:56</td>   <td>-8641</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.beforeMethod(java.lang.reflect.Method)[pri:0, instance:testng.HCM_Login@39aeed2f]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1122134344</td>   <td></td> </tr>
-<tr bgcolor="9bad6f">  <td>20/04/27 11:48:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.beforeMethod(java.lang.reflect.Method)[pri:0, instance:testng.HCM_Login@39aeed2f]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1122134344</td>   <td></td> </tr>
-<tr bgcolor="9bad6f">  <td>20/04/27 11:48:13</td>   <td>8822</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.beforeMethod(java.lang.reflect.Method)[pri:0, instance:testng.HCM_Login@39aeed2f]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1122134344</td>   <td></td> </tr>
-<tr bgcolor="9bad6f">  <td>20/04/27 11:49:07</td>   <td>62003</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.beforeMethod(java.lang.reflect.Method)[pri:0, instance:testng.HCM_Login@39aeed2f]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1122134344</td>   <td></td> </tr>
-<tr bgcolor="9bad6f">  <td>20/04/27 11:47:39</td>   <td>-25260</td> <td title="&gt;&gt;Base.beforeSuite()[pri:0, instance:testng.InvalidLoginCredientials@5c7fa833]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1122134344</td>   <td></td> </tr>
-<tr bgcolor="9bad6f">  <td>20/04/27 11:47:40</td>   <td>-24901</td> <td>&nbsp;</td><td title="&gt;&gt;Base.beforeTest()[pri:0, instance:testng.InvalidLoginCredientials@5c7fa833]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1122134344</td>   <td></td> </tr>
-<tr bgcolor="dfaefb">  <td>20/04/27 11:49:07</td>   <td>62003</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HCM_Login.createServiceRequest()[pri:4, instance:testng.HCM_Login@39aeed2f]">createServiceRequest</td> 
-  <td>main@1122134344</td>   <td></td> </tr>
-<tr bgcolor="9bad6f">  <td>20/04/27 11:47:51</td>   <td>-13403</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.getApplicationUrl()[pri:0, instance:testng.InvalidLoginCredientials@5c7fa833]">&gt;&gt;getApplicationUrl</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1122134344</td>   <td></td> </tr>
-<tr bgcolor="9bad6f">  <td>20/04/27 11:47:56</td>   <td>-8951</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.getApplicationUrl()[pri:0, instance:testng.HCM_Login@39aeed2f]">&gt;&gt;getApplicationUrl</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1122134344</td>   <td></td> </tr>
-<tr bgcolor="696690">  <td>20/04/27 11:47:52</td>   <td>-12394</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvalidLoginCredientials.invalidLogin()[pri:0, instance:testng.InvalidLoginCredientials@5c7fa833]">invalidLogin</td> 
-  <td>main@1122134344</td>   <td></td> </tr>
-<tr bgcolor="dfaefb">  <td>20/04/27 11:47:56</td>   <td>-8641</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HCM_Login.loginPage()[pri:1, instance:testng.HCM_Login@39aeed2f]">loginPage</td> 
-  <td>main@1122134344</td>   <td></td> </tr>
-<tr bgcolor="dfaefb">  <td>20/04/27 11:48:13</td>   <td>8822</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HCM_Login.navigateTabs()[pri:3, instance:testng.HCM_Login@39aeed2f]">navigateTabs</td> 
-  <td>main@1122134344</td>   <td></td> </tr>
-<tr bgcolor="9bad6f">  <td>20/04/27 11:49:59</td>   <td>113937</td> <td>&nbsp;</td><td title="&lt;&lt;Base.tearDown()[pri:0, instance:testng.InvalidLoginCredientials@5c7fa833]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1122134344</td>   <td></td> </tr>
+<tr bgcolor="d9aa8b">  <td>20/05/02 02:40:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterMethod(org.testng.ITestResult)[pri:0, instance:com.evonsys.citi.runnerClasses.HCM_LoginRunner@26be92ad]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1418621776</td>   <td></td> </tr>
+<tr bgcolor="d9aa8b">  <td>20/05/02 02:40:24</td>   <td>-138</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.beforeMethod(java.lang.reflect.Method)[pri:0, instance:com.evonsys.citi.runnerClasses.HCM_LoginRunner@26be92ad]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1418621776</td>   <td></td> </tr>
+<tr bgcolor="d9aa8b">  <td>20/05/02 02:40:13</td>   <td>-11404</td> <td title="&gt;&gt;Base.beforeSuite()[pri:0, instance:com.evonsys.citi.runnerClasses.HCM_LoginRunner@26be92ad]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1418621776</td>   <td></td> </tr>
+<tr bgcolor="d9aa8b">  <td>20/05/02 02:40:13</td>   <td>-11240</td> <td>&nbsp;</td><td title="&gt;&gt;Base.beforeTest()[pri:0, instance:com.evonsys.citi.runnerClasses.HCM_LoginRunner@26be92ad]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1418621776</td>   <td></td> </tr>
+<tr bgcolor="696690">  <td>20/05/02 02:40:24</td>   <td>-135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HCM_LoginRunner.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.evonsys.citi.runnerClasses.HCM_LoginRunner@26be92ad]">feature</td> 
+  <td>main@1418621776</td>   <td></td> </tr>
+<tr bgcolor="696690">  <td>20/05/02 02:40:24</td>   <td>-602</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HCM_LoginRunner.setUpClass()[pri:0, instance:com.evonsys.citi.runnerClasses.HCM_LoginRunner@26be92ad]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1418621776</td>   <td></td> </tr>
+<tr bgcolor="696690">  <td>20/05/02 02:40:25</td>   <td>692</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HCM_LoginRunner.tearDown()[pri:0, instance:com.evonsys.citi.runnerClasses.HCM_LoginRunner@26be92ad]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1418621776</td>   <td></td> </tr>
 </table>
