--- a/evonsys/test-output/old/Default suite/classes.html
+++ b/evonsys/test-output/old/Default suite/classes.html
@@ -25,13 +25,21 @@
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>beforeMethod</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>afterMethod</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>tearDownClass</td>
+<td>tearDown</td>
 <td>&nbsp;</td></tr>
 </table>
