--- a/evonsys/test-output/old/Default suite/groups.html
+++ b/evonsys/test-output/old/Default suite/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>cucumber</td><td>AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.evonsys.citi.runnerClasses.HCM_LoginRunner@402f32ff]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>cucumber</td><td>HCM_LoginRunner.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.evonsys.citi.runnerClasses.HCM_LoginRunner@61832929]<br/></td></tr>
 </table>
