--- a/evonsys/test-output/old/Default suite/methods.html
+++ b/evonsys/test-output/old/Default suite/methods.html
@@ -1,10 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd618c">  <td>20/04/30 17:00:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.evonsys.citi.runnerClasses.HCM_LoginRunner@402f32ff]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1188392295</td>   <td></td> </tr>
-<tr bgcolor="bd618c">  <td>20/04/30 17:00:34</td>   <td>329</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.evonsys.citi.runnerClasses.HCM_LoginRunner@402f32ff]">feature</td> 
-  <td>main@1188392295</td>   <td></td> </tr>
-<tr bgcolor="bd618c">  <td>20/04/30 17:00:34</td>   <td>334</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.evonsys.citi.runnerClasses.HCM_LoginRunner@402f32ff]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1188392295</td>   <td></td> </tr>
+<tr bgcolor="bf7ae5">  <td>20/06/03 10:32:27</td>   <td>0</td> <td title="&gt;&gt;Base.beforeSuite()[pri:0, instance:com.evonsys.citi.runnerClasses.HCM_LoginRunner@61832929]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@258754732</td>   <td></td> </tr>
+<tr bgcolor="bf7ae5">  <td>20/06/03 10:32:28</td>   <td>174</td> <td>&nbsp;</td><td title="&gt;&gt;Base.beforeTest()[pri:0, instance:com.evonsys.citi.runnerClasses.HCM_LoginRunner@61832929]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@258754732</td>   <td></td> </tr>
+<tr bgcolor="a07db3">  <td>20/06/03 10:32:35</td>   <td>7496</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HCM_LoginRunner.setUpClass()[pri:0, instance:com.evonsys.citi.runnerClasses.HCM_LoginRunner@61832929]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@258754732</td>   <td></td> </tr>
+<tr bgcolor="bf7ae5">  <td>20/06/03 10:32:35</td>   <td>7977</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.beforeMethod(java.lang.reflect.Method)[pri:0, instance:com.evonsys.citi.runnerClasses.HCM_LoginRunner@61832929]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@258754732</td>   <td></td> </tr>
+<tr bgcolor="a07db3">  <td>20/06/03 10:32:35</td>   <td>7982</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HCM_LoginRunner.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.evonsys.citi.runnerClasses.HCM_LoginRunner@61832929]">feature</td> 
+  <td>main@258754732</td>   <td></td> </tr>
+<tr bgcolor="bf7ae5">  <td>20/06/03 10:33:32</td>   <td>64759</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterMethod(org.testng.ITestResult)[pri:0, instance:com.evonsys.citi.runnerClasses.HCM_LoginRunner@61832929]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@258754732</td>   <td></td> </tr>
+<tr bgcolor="a07db3">  <td>20/06/03 10:33:33</td>   <td>65759</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HCM_LoginRunner.tearDown()[pri:0, instance:com.evonsys.citi.runnerClasses.HCM_LoginRunner@61832929]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@258754732</td>   <td></td> </tr>
 </table>
